# rust_document_generator

./: .gitignore  Cargo.toml  LICENSE  README.md  doc.data
doc_def/: Cargo.toml
doc_def/src/: document.rs  file.rs  lib.rs
doc_macro/: Cargo.toml
doc_macro/src/: lib.rs
doc_server/: Cargo.toml  project.json
doc_server/src/: api_doc.rs  main.rs  project.rs
doc_server/templates/: api.html  index.html
src/: lib.rs
