[package]
name = "rust_document_generator"
version = "0.1.0"
authors = ["polariseye <polariseye@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc_def={path="./doc_def"}
doc_macro={path="./doc_macro"}

[workspace]
members=["doc_def","doc_macro","doc_server"]