[package]
name = "doc_def"
version = "0.1.0"
authors = ["liujun <polariseye@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
serde = {version= "1.0.129",features=["derive"]}
serde_json = "1.0.67"
serde_repr = "0.1"