[package]
name = "doc_macro"
version = "0.1.0"
authors = ["polariseye <polariseye@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.10"
syn = {version="1.0.80",features=["full","fold"]}
proc-macro2 = {version="1.0.30",features=["span-locations","proc-macro"]}
once_cell = "1.8.0"
serde = {version= "1.0.129",features=["derive"]}
serde_json = "1.0.67"
serde_repr = "0.1"
doc_def={path="../doc_def"}