[package]
name = "doc_server"
version = "0.1.0"
authors = ["liujun <polariseye@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc_def={path="../doc_def"}
doc_macro={path="../doc_macro"}

tokio = { version = "1.4.0", features = ["full"] }
warp = "0.3.1"
once_cell = "1.8.0"
serde_json = "1.0.67"
serde = {version= "1.0.129",features=["derive"]}
tera = "1.13.0"
globwalk = "0.8.1"